--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ streamlit==1.33.0
 pandas==2.2.2
 google-generativeai==0.6.0
 python-docx==1.1.0
-youtube-comment-downloader==0.3.4
+youtube-comment-downloader
 matplotlib==3.8.4
 seaborn==0.13.2
 networkx==3.2.1
