--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,2 @@
-GOOGLE_API_KEY="AIzaSyC-DJ0DOk5M_fWq0BdrARlWrWge1E9WTag"
+GOOGLE_API_KEY="AIzaSyDcC8kLzOLvQa9NJk8G4mSz3Xa0NotJu08"
+AIzaSyC-DJ0DOk5M_fWq0BdrARlWrWge1E9WTag
